--- a/Client/package.json
+++ b/Client/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "md2": "0.0.16",
+    "ng2-charts": "^1.5.0",
     "rxjs": "^5.2.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
@@ -32,7 +34,7 @@
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.28.3",
+    "@angular/cli": "1.0.0-rc.1",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
