--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@ngx-translate/core": "^6.0.0",
+    "@ngx-translate/http-loader": "0.0.3",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "md2": "0.0.16",
