--- a/API/HockeyStat.Model/HockeyStat.Model.csproj
+++ b/API/HockeyStat.Model/HockeyStat.Model.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.108" />
   </ItemGroup>
 
 </Project>
