--- a/API/HockeyStat.MoveData/HockeyStat.MoveData.csproj
+++ b/API/HockeyStat.MoveData/HockeyStat.MoveData.csproj
@@ -5,4 +5,17 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="SQLitePCLRaw.bundle_sqlcipher" Version="1.1.11" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.108" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HockeyStat.Model\HockeyStat.Model.csproj" />
+  </ItemGroup>
+
 </Project>
